--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -29,49 +29,83 @@ body {
   background-size: contain;
 }
 
-.launcher-debug {
-  position: relative;
+.terminal {
+  display: flex;
   width: 100%;
   height: 50%;
   color: white;
   border: solid white 2px;
   
-  .console {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0; 
-    left: 0;
-    overflow: auto;
-    z-index: 1;
-    padding: 0.5rem 0;
+  .actions {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+    flex-shrink: 0;
+    margin-right: 0.5rem;
 
-    .command {
+    .application {
       display: flex;
-
-      .prompt {
-        flex-grow: 0;
-        flex-shrink: 0;
-        color: red;
-        margin-right: 0.5rem;
-      }
-  
-      pre {
-        flex-grow: 1;
-        flex-shrink: 1;
-        white-space: pre-wrap;
-        word-wrap: break-word;
-        margin: 0;
-      }
+      flex-direction: column;
     }
   }
 
-  .background {
-    width: 100%; 
-    height: 100%;  
-    opacity: 0.3;
-    z-index: -1;
-    background-size: contain;
-    background: url('/img/launcher-debug.gif') no-repeat center center;
+  .console {
+    width: 100%;
+    height: 100%;
+    position: relative;
+
+    .background {
+      width: 100%; 
+      height: 100%;  
+      opacity: 0.3;
+      z-index: -1;
+      background-size: contain;
+      background: url('/img/launcher-debug.gif') no-repeat center center;
+    }
+    
+    .output {
+      position: absolute;
+      display: flex;
+      flex-direction: column;
+      width: 100%; 
+      height: 100%;  
+      overflow: auto;
+      z-index: 1;
+      
+      .command {
+        display: flex;
+        flex-grow: 1;
+        flex-shrink: 0;
+
+        .timestamp {
+          display: none;
+        }
+  
+        .prompt {
+          flex-grow: 0;
+          flex-shrink: 0;
+          color: red;
+          margin-right: 0.5rem;
+        }
+    
+        pre {
+          flex-grow: 1;
+          flex-shrink: 1;
+          white-space: pre-wrap;
+          word-wrap: break-word;
+          margin: 0;
+        }
+      }
+    }
+  }
+}
+
+.blink {
+  animation: blinker 1.25s step-start infinite;
+}
+
+@keyframes blinker {
+  50% {
+    opacity: 0;
   }
 }
